--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="src/assets/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Material Tailwind Kit React | By Creative Tim</title>
+    <title>NCCIMO</title>
     <link rel="stylesheet" href="index.css">
     <link
       rel="stylesheet"
